--- a/expense-tracker backend/src/main/resources/application.properties
+++ b/expense-tracker backend/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=expense-tracker
+spring.datasource.url=jdbc:mysql://localhost:3306/expensetracker
+spring.datasource.username=root
+spring.datasource.password=gitesh
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8088
+
+
+logging.level.root=INFO
+logging.level.com.Expense.tracker.backend=INFO
+
+
